[package]
name        = "xvision-data"
description = "OHLCV ingest, indicators, onchain signals"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xvision_data"
path = "src/lib.rs"

[dependencies]
xvision-core = { path = "../xvision-core" }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
parquet      = { workspace = true }
anyhow       = { workspace = true }
reqwest      = { workspace = true, features = ["json", "query"] }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
chrono       = { workspace = true, features = ["serde"] }
tokio        = { workspace = true, features = ["sync", "macros", "rt"] }
governor     = "0.6"
nonzero_ext  = "0.3"
thiserror    = { workspace = true }
tracing      = { workspace = true }
sha2         = "0.10"
hex          = "0.4"
bytes        = "1"
async-trait  = { workspace = true }
apca         = { workspace = true }
futures      = "0.3"
rand         = { version = "0.8", default-features = false, features = ["std", "std_rng", "small_rng"] }
ts-rs        = { version = "9", optional = true }

[dev-dependencies]
proptest = { workspace = true }
wiremock = "0.6"
mockito  = "1"
tokio    = { workspace = true, features = ["rt", "macros", "test-util"] }

[features]
default   = []
# Emit TypeScript types for data-layer types (DataDefect, DataManifest, etc.)
# Activated via xvision-engine's `ts-export` feature.
ts-export = ["dep:ts-rs"]
