[package]
name        = "xvision-engine"
description = "strategy creation, bundling, agent execution"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xvision_engine"
path = "src/lib.rs"

[dependencies]
xvision-core          = { path = "../xvision-core" }
xvision-data          = { path = "../xvision-data" }
xvision-eval          = { path = "../xvision-eval" }
xvision-execution     = { path = "../xvision-execution" }
xvision-memory        = { path = "../xvision-memory" }
xvision-observability = { path = "../xvision-observability" }
xvision-risk          = { path = "../xvision-risk" }

reqwest     = { workspace = true }

serde       = { workspace = true }
toml        = { workspace = true }
toml_edit   = "0.22"
serde_json  = { workspace = true }
chrono      = { workspace = true }
ulid        = { version = "1", features = ["serde"] }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
sqlx        = { workspace = true }
flate2      = "1.0"
blake3      = "1.5"
ts-rs       = { version = "9", optional = true }
statrs      = "0.18"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex         = "0.4"
sha2        = "0.10"
include_dir = "0.7"
rand_core   = { version = "0.6", features = ["getrandom"] }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
parquet      = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio    = { workspace = true, features = ["rt", "macros"] }
wiremock = "0.6"
ulid     = { version = "1", features = ["serde"] }

[features]
default   = []
# Emit TypeScript types for every API request/response to
# `frontend/web/src/api/types.gen/`. Run via `cargo xtask gen-types` (Plan 1
# Task 4) or directly with `cargo test --features ts-export --tests`.
ts-export = ["dep:ts-rs", "xvision-core/ts-export"]
