[package]
name        = "xvision-engine"
description = "strategy creation, bundling, agent execution"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xvision_engine"
path = "src/lib.rs"

[dependencies]
xvision-agent-client  = { path = "../xvision-agent-client" }
xvision-core          = { path = "../xvision-core" }
xvision-data          = { path = "../xvision-data" }
xvision-eval          = { path = "../xvision-eval" }
xvision-execution     = { path = "../xvision-execution" }
xvision-filters       = { path = "../xvision-filters" }
xvision-memory        = { path = "../xvision-memory" }
xvision-observability = { path = "../xvision-observability" }
xvision-identity      = { path = "../xvision-identity", optional = true }

reqwest     = { workspace = true }

arrow-array  = { workspace = true }
parquet      = { workspace = true }

serde       = { workspace = true }
similar     = "2"
toml        = { workspace = true }
toml_edit   = "0.22"
serde_json  = { workspace = true }
chrono      = { workspace = true }
ulid        = { version = "1", features = ["serde"] }
# v5 (name-based, deterministic) for §2-B trajectory cycle_id derivation;
# workspace default only ships v4. serde for the workspace API parity.
uuid        = { version = "1", features = ["v4", "v5", "serde"] }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
futures     = "0.3"
tracing     = { workspace = true }
sqlx        = { workspace = true }
flate2      = "1.0"
blake3      = "1.5"
ts-rs       = { version = "9", optional = true }
statrs      = "0.18"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex         = "0.4"
sha2        = "0.10"
include_dir = "0.7"
dirs        = "5"
rand_core   = { version = "0.6", features = ["getrandom"] }
rand        = "0.8"
rand_chacha = "0.3"
arrow-schema = { workspace = true }
sysinfo     = { version = "0.32", default-features = false, features = ["system"] }

[dev-dependencies]
tempfile           = "3"
tokio              = { workspace = true, features = ["rt", "macros"] }
tracing-subscriber = { workspace = true }
wiremock           = "0.6"
mockito            = "1"
ulid               = { version = "1", features = ["serde"] }
uuid               = { workspace = true }

[features]
default   = []
chain-attest = ["dep:xvision-identity"]
# Emit TypeScript types for every API request/response to
# `frontend/web/src/api/types.gen/`. Run via `cargo xtask gen-types` (Plan 1
# Task 4) or directly with `cargo test --features ts-export --tests`.
ts-export = [
    "dep:ts-rs",
    "xvision-core/ts-export",
    "xvision-data/ts-export",
    "xvision-filters/ts-export",
    "xvision-memory/ts-export",
]
