[package]
name        = "xvision-execution"
description = "Stage 3 — Alpaca + Orderly executors"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xvision_execution"
path = "src/lib.rs"

[dependencies]
xvision-core = { path = "../xvision-core" }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
tokio = { workspace = true }

# Alpaca trading client — v0.30.0; no rustls feature exists upstream,
# hyper-tls is the only TLS backend offered by this crate.
apca = { workspace = true }
# num-decimal is apca's numeric type; not re-exported so we depend on it directly.
num-decimal = { version = "0.2", features = ["num-v04", "serde"], default-features = false }

# Orderly Network HTTP client — raw reqwest calls instead of orderly-connector-rs.
# orderly-connector-rs 0.4.15 pins zeroize = "=1.3.0" via its solana-sdk
# transitive dep, which conflicts with reqwest 0.13 / rustls 0.23 which need
# zeroize >= 1.7. The SDK cannot be compiled in this workspace without forking
# orderly-connector-rs to drop the Solana dependency (tracked as F19 in
# FOLLOWUPS.md). For v1, we implement the required Orderly endpoints directly
# (POST /v1/order, GET /v1/order/{id}, GET /v1/positions, GET /v1/client/holding,
# POST /v1/algo-order) as signed HTTP calls. Signing scheme: Ed25519 over
# `${timestamp}${METHOD}${path}${body}`, base64-encoded, secret decoded from
# base58 — matching the orderly-connector-rs auth module exactly.
reqwest = { workspace = true, features = ["json"] }
# ed25519-dalek 2.x uses zeroize >= 1.7, compatible with this workspace.
ed25519-dalek = { version = "2", features = ["pkcs8"] }
# base58 decoder for orderly secret keys.
bs58 = "0.5"
# base64 encoder for the Ed25519 signature.
base64 = "0.22"
# HMAC-SHA256 for Bybit testnet auth.
hmac = "0.12"
sha2 = "0.10"

# Hyperliquid (Degen Arena venue) native signing — EIP-712 L1-action signing
# with a trade-only HL agent wallet (secp256k1), NO npm shell-out (see
# `virtuals.rs`). `alloy` supplies keccak256 / Address / PrivateKeySigner /
# `sol!` EIP-712; `rmp-serde` supplies the canonical named-map msgpack the HL
# action-hash requires. We deliberately do NOT use the official
# `hyperliquid_rust_sdk` (it pins alloy 1.0, conflicting with this workspace's
# alloy 2). The signing is verified byte-for-byte against the HL Python SDK's
# published test vectors in `virtuals::sign` tests.
alloy = { workspace = true }
rmp-serde = "1"

[dev-dependencies]
# mockito chosen over wiremock: simpler sync setup, no async mock-server
# startup boilerplate, adequate for the four deterministic unit scenarios.
mockito = "1"
tokio = { workspace = true, features = ["rt", "macros"] }
