[package]
name        = "xvision-harness"
description = "boundary probes (minimal v1 corpus)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
name = "xvision_harness"
path = "src/lib.rs"

[dependencies]
xvision-core = { path = "../xvision-core" }
xvision-risk = { path = "../xvision-risk" }
tracing      = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
uuid   = { workspace = true }
